@@ -287,5 +287,5 @@ AutLib::fileExists(char *filename)
 {
   // check file exists
   std::ifstream s(filename);
-  return s != 0;
+  return s.good();
 }
