@@ -1,5 +1,5 @@
 MONA Version 1.4
-Copyright (C) 1997-2015 Aarhus University.
+Copyright (C) 1997-2016 Aarhus University.
 
 [The 'Mem/dlmalloc.*' are the memory management
 routines of Doug Lea (dl@cs.oswego.edu) and are 
