@@ -1,4 +1,4 @@
-.TH MONA 1 "APRIL 2013" "" "BRICS tools"
+.TH MONA 1 "MARCH 2016" "" "BRICS tools"
 .SH NAME
 mona \- a decision procedure for the logics WS1S and WS2S
 .SH SYNOPSIS
